--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ license = "BSD-3-Clause"
 
 [tool.poetry.dependencies]
 python = "^3.6.2"
-django = "^3.0"
+django = ">=3.0,<5.0"
 sentry-sdk = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
